[package]
name = "libcrux-ecdh"
version = "0.0.5"
description = "Libcrux ECDH implementation"
readme = "Readme.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
path = "src/ecdh.rs"

[dependencies]
rand = { version = "0.9", default-features = false }
libcrux-curve25519 = { version = "=0.0.5", path = "../crates/algorithms/curve25519" }
libcrux-p256 = { version = "=0.0.5", path = "../crates/algorithms/p256", features = [
    "expose-hacl",
] }
tls_codec = { version = "0.4.2", features = [
    "derive",
], optional = true }

[features]
default = ["std"]
std = ["rand/std"]
codec = ["dep:tls_codec"]

[dev-dependencies]
rand_core = { version = "0.9", features = ["os_rng"] }
hex = { version = "0.4.3", features = ["serde"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.5"
