[package]
name = "libcrux-ecdh"
version = "0.0.6"
description = "Libcrux ECDH implementation"
readme = "Readme.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
path = "src/ecdh.rs"

[dependencies]
rand = { version = "0.9", default-features = false }
libcrux-curve25519 = { workspace = true, default-features = true }
libcrux-p256 = { workspace = true, default-features = true, features = [
    "expose-hacl",
] }
tls_codec = { version = "0.4.2", features = [
    "derive",
], optional = true }

[features]
default = ["std"]
std = ["rand/std"]
codec = ["dep:tls_codec"]

[dev-dependencies]
rand_core = { version = "0.10", features = ["os_rng"] }
hex = { version = "0.4.3", features = ["serde"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.5"
