[package]
name = "libcrux-hkdf"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
description = "Libcrux HKDF implementation"

[lib]
path = "src/hkdf.rs"

[features]
default = ["portable_hacl"]
portable_hacl = ["hacl"]
hacl = ["dep:libcrux-hmac", "dep:libcrux-hacl-rs", "dep:krml"]

[dependencies]
libcrux-hacl-rs = { path = "../libcrux-hacl-rs/", optional = true }
libcrux-hmac = { path = "../libcrux-hmac", optional = true, features = [
  "hacl",
] }
krml = { package = "libcrux-hacl-rs-krml", path = "../libcrux-hacl-rs-krml", optional = true }
