[package]
name = "libcrux-hkdf"
version = "0.0.3-alpha.1"
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
description = "Libcrux HKDF implementation"

[lib]
path = "src/hkdf.rs"

[features]
[dependencies]
libcrux-hmac = { version = "=0.0.3-alpha.1", path = "../libcrux-hmac", features = [
    "expose-hacl",
] }
libcrux-hacl-rs = { version = "=0.0.3-alpha.1", path = "../hacl-rs/" }
