[package]
name = "libcrux-hmac"
version = "0.0.3-alpha.1"
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
description = "Libcrux HMAC implementation"

[lib]
path = "src/hmac.rs"

[features]
expose-hacl = []

[dependencies]
libcrux-hacl-rs = { version = "=0.0.3-alpha.1", path = "../hacl-rs/" }
libcrux-sha2 = { version = "=0.0.3-alpha.1", path = "../sha2", features = [
    "expose-hacl",
] }
libcrux-macros = { version = "=0.0.3-alpha.1", path = "../macros" }
