[package]
name = "libcrux-hmac"
version = "0.0.3-alpha.3"
description = "Libcrux HMAC implementation"
readme = "Readme.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
path = "src/hmac.rs"

[features]
expose-hacl = []

[dependencies]
libcrux-hacl-rs = { version = "=0.0.3-alpha.3", path = "../hacl-rs/" }
libcrux-sha2 = { version = "=0.0.3-alpha.3", path = "../sha2", features = [
    "expose-hacl",
] }
libcrux-macros = { version = "=0.0.3-alpha.3", path = "../macros" }
