[package]
name = "libcrux-kem"
version = "0.0.6"
description = "Libcrux KEM implementation"
readme = "README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
exclude = ["/tests"]

[lib]
path = "src/kem.rs"

[dependencies]
libcrux-ml-kem = { workspace = true, features = [
    "default-no-std",
] }
libcrux-sha3.workspace = true
libcrux-ecdh.workspace = true
libcrux-curve25519.workspace = true
libcrux-p256.workspace = true
libcrux-traits.workspace = true

rand = { version = "0.9", default-features = false }
tls_codec = { version = "0.4.2", features = ["derive"], optional = true }

[features]
default = ["std"]
std = ["rand/std", "libcrux-ecdh/std", "libcrux-ml-kem/std"]
tests = []                                                   # Expose functions for testing.
pre-verification = []
# Encoding and decoding with TLSCodec
codec = ["dep:tls_codec", "libcrux-ml-kem/codec", "libcrux-ecdh/codec"]

[dev-dependencies]
libcrux-kem = { path = "./", features = ["tests"] }
rand = { version = "0.9", features = ["os_rng"] }
hex = { version = "0.4.3", features = ["serde"] }
libcrux-traits = { workspace = true, features = [
    "generic-tests",
] }
