[package]
name = "libcrux-kem"
version = "0.0.5"
description = "Libcrux KEM implementation"
readme = "README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
exclude = ["/tests"]

[lib]
path = "src/kem.rs"

[dependencies]
# XXX: We can't use the workspace dependency here because of https://github.com/rust-lang/cargo/issues/12162
libcrux-ml-kem = { version = "=0.0.6", path = "../libcrux-ml-kem", default-features = false, features = [
    "default-no-std",
] }
libcrux-sha3.workspace = true
libcrux-ecdh = { version = "=0.0.5", path = "../libcrux-ecdh", default-features = false }
libcrux-curve25519 = { version = "=0.0.5", path = "../crates/algorithms/curve25519", default-features = false }
libcrux-p256 = { version = "=0.0.5", path = "../crates/algorithms/p256", default-features = false }
libcrux-traits.workspace = true
rand = { version = "0.9", default-features = false }
tls_codec = { version = "0.4.2", features = [
    "derive",
],  optional = true }

[features]
default = ["std"]
std = ["rand/std", "libcrux-ecdh/std", "libcrux-ml-kem/std"]
tests = []                                                   # Expose functions for testing.
pre-verification = []
# Encoding and decoding with TLSCodec
codec = ["dep:tls_codec","libcrux-ml-kem/codec", "libcrux-ecdh/codec"]

[dev-dependencies]
libcrux-kem = { path = "./", features = ["tests"] }
rand = { version = "0.9", features = ["os_rng"] }
hex = { version = "0.4.3", features = ["serde"] }
libcrux-traits = { workspace = true, features = [
    "generic-tests",
] }
