[package]
name = "libcrux-ml-kem"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
description = "Libcrux ML-KEM & Kyber implementations"
exclude = [
    "/tests",
    "/implementation_notes.pdf",
    "/c",
    "/proofs",
    "/c.sh",
    "/c.yaml",
    "/hax.py",
    "/cg",
    "/c-nss.sh",
    "/c.sh",
    "/boring.sh",
]

[lib]
bench = false # so libtest doesn't eat the arguments to criterion

[dependencies]
rand = { version = "0.9", optional = true }
libcrux-platform = { version = "0.0.2-beta.3", path = "../sys/platform" }
libcrux-sha3 = { version = "0.0.2-beta.3", path = "../libcrux-sha3" }
libcrux-intrinsics = { version = "0.0.2-beta.3", path = "../libcrux-intrinsics" }
hax-lib = { version = "0.1.0", git = "https://github.com/hacspec/hax/" }

[features]
# By default all variants and std are enabled.
default = ["std", "mlkem512", "mlkem768", "mlkem1024", "rand"]

# Hardware features can be force enabled.
# It is not recommended to use these. This crate performs CPU feature detection
# and enables the features when they are available.
simd128 = ["libcrux-sha3/simd128", "libcrux-intrinsics/simd128"]
simd256 = ["libcrux-sha3/simd256", "libcrux-intrinsics/simd256"]

# Features for the different key sizes of ML-KEM
mlkem512 = []
mlkem768 = []
mlkem1024 = []

# Enable Round 3 Kyber in addition to ML-KEM
kyber = []

# APIs that sample their own randomness
rand = ["dep:rand"]

# std support
std = ["alloc"]
alloc = []

# Incremental encapsulation API
incremental = []

[dev-dependencies]
rand = { version = "0.9", features = ["thread_rng"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
criterion = "0.5"

[[bench]]
name = "ml-kem"
harness = false

[[example]]
name = "encapsulate"
required-features = ["mlkem768"]

[[example]]
name = "decapsulate"
required-features = ["mlkem768"]

[[example]]
name = "keygen"
required-features = ["mlkem768"]

[package.metadata."docs.rs"]
features = ["kyber"]
rustdoc-args = ["--cfg", "doc_cfg"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
] }
