[package]
name = "libcrux-psq"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
description = "Libcrux Pre-Shared post-Quantum key establishement protocol"
publish = false

[lib]
bench = false # so libtest doesn't eat the arguments to criterion

[dependencies]
libcrux-kem = { version = "0.0.2-beta.2", path = "../libcrux-kem", features = [
    "pre-verification",
] }
libcrux-hkdf = { version = "=0.0.2-beta.2", path = "../libcrux-hkdf" }
libcrux-hmac = { version = "=0.0.2-beta.2", path = "../libcrux-hmac" }
classic-mceliece-rust = { version = "2.0.0", features = [
    "mceliece460896f",
    "zeroize",
] }
rand = { version = "0.8" }
libcrux-ecdh = { version = "0.0.2-beta.2", path = "../libcrux-ecdh" }
libcrux = { version = "0.0.2-beta.2", path = ".." }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "psq"
harness = false
