[package]
name = "libcrux-psq"
description = "Libcrux Pre-Shared post-Quantum key establishement protocol"
version = "0.0.7"
readme = "README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
publish = true

[lib]
bench = false # so libtest doesn't eat the arguments to criterion

[dependencies]
libcrux-traits.workspace = true
libcrux-kem = { workspace = true, features = [
    "codec",
] }
libcrux-chacha20poly1305.workspace = true
libcrux-hkdf.workspace = true
libcrux-hmac.workspace = true
libcrux-sha2.workspace = true
classic-mceliece-rust = { version = "3.1.0", features = [
    "mceliece460896f",
    "zeroize",
], optional = true }
rand = { version = "0.9" }
rand_old = { version = "0.8", package = "rand", optional = true }
libcrux-ecdh = { workspace = true, default-features = true }
libcrux-ml-kem = { workspace = true, default-features = true, features = [
    "codec",
    "rand",
] }
libcrux-ed25519 = { workspace = true, features = [
    "rand",
    "codec",
] }
tls_codec = { version = "0.4.2", features = ["derive"] }
libcrux-ml-dsa = { workspace = true, features = ["codec"] }
libcrux-aesgcm.workspace = true

[dev-dependencies]
libcrux-psq = { path = ".", features = ["test-utils"] }
clap = { version = "4.5.30", features = ["derive"] }
criterion = "0.8"
log = "0.4.26"
pretty_env_logger = "0.5.0"

[features]
v1 = []
classic-mceliece = ["dep:classic-mceliece-rust", "rand_old"]
# DO NOT USE: This feature enables implementations backed
# by non-post-quantum KEMs and should only be used for
# testing purposes and benchmark baselines.
test-utils = ["v1"]

[[bench]]
name = "psq"
harness = false
required-features = ["v1", "classic-mceliece", "test-utils"]

[[bench]]
name = "psq_v2"
harness = false

[[example]]
name = "psq"
required-features = ["v1"]
