[package]
name = "libcrux-secret-independence"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
description = "Libcrux Secret Independence Types and Utilities"
exclude = ["/proofs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hax-lib = { version = "0.1.0-alpha.1", git = "https://github.com/hacspec/hax/" }

[features]
default = ["secret_independence"]
secret_independence = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(eurydice)'] }
