[package]
name = "libcrux-sha3"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
description = "Libcrux SHA-3 implementation"
exclude = ["/proofs", "/c.sh", "/c.yaml", "/tests/tv", "tests/cavp.rs"]

[lib]
bench = false # so libtest doesn't eat the arguments to criterion

[dependencies]
libcrux-platform = { version = "0.0.2-beta.2", path = "../sys/platform" }
libcrux-intrinsics = { version = "0.0.2-beta.2", path = "../libcrux-intrinsics" }

# This is only required for verification.
# The hax config is set by the hax toolchain.
[target.'cfg(hax)'.dependencies]
hax-lib = { version = "0.1.0-alpha.1", git = "https://github.com/hacspec/hax/" }

[features]
simd128 = []
simd256 = []

[[bench]]
name = "sha3"
harness = false

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
rand = "0.8.5"
cavp = { version = "0.0.2-beta.2", path = "../cavp" }
pretty_env_logger = "0.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(eurydice)'] }
