[package]
name = "libcrux-sha3"
version = "0.0.3"
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
description = "Libcrux SHA-3 implementation"
exclude = ["/proofs", "/c.sh", "/c.yaml", "/tests/tv", "tests/cavp.rs"]

[lib]
bench = false # so libtest doesn't eat the arguments to criterion

[dependencies]
libcrux-platform = { version = "0.0.2", path = "../sys/platform" }
libcrux-intrinsics = { version = "0.0.3", path = "../libcrux-intrinsics" }
libcrux-traits = { version = "=0.0.3", path = "../traits/" }

# This is only required for verification.
# The hax config is set by the hax toolchain.
[target.'cfg(hax)'.dependencies]
hax-lib.workspace = true

[features]
simd128 = ["libcrux-intrinsics/simd128"]
simd256 = ["libcrux-intrinsics/simd256"]

[[bench]]
name = "sha3"
harness = false

[dev-dependencies]
criterion = "0.7.0"
hex = "0.4.3"
rand = "0.9"
cavp = { version = "0.0.2", path = "../cavp" }
pretty_env_logger = "0.5.0"
clap = { version = "4.5.39", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(eurydice)'] }
