[package]
name = "libcrux-simd"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
libcrux-platform = { version = "0.0.2-pre.2", path = "../sys/platform" }

[features]
simd128 = []
simd256 = []
