[package]
name = "libcrux-p256"
description = "Formally verified P-256 implementation"
readme = "Readme.md"

version = "0.0.4"
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
libcrux-macros = { version = "=0.0.3", path = "../macros" }
libcrux-traits = { version = "=0.0.4", path = "../traits" }
libcrux-hacl-rs = { version = "=0.0.4", path = "../hacl-rs/" }
libcrux-secrets = { version = "=0.0.4", path = "../secrets" }
libcrux-sha2 = { version = "=0.0.4", path = "../sha2", features = [
    "expose-hacl",
] }

[features]
expose-hacl = []

# Checking secret independence
check-secret-independence = [
    "libcrux-secrets/check-secret-independence",
    "libcrux-traits/check-secret-independence",
]


[dev-dependencies]
libcrux-traits = { version = "0.0.4", path = "../traits", features = [
    "generic-tests",
] }
