[package]
name = "libcrux-poly1305"
description = "Formally verified Poly1305 MAC library"

version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[features]
expose-hacl = []

[dependencies]
libcrux-hacl-rs = { version = "=0.0.2", path = "../hacl-rs/" }
libcrux-macros = { version = "=0.0.2", path = "../macros" }
