[package]
name = "libcrux-poly1305"
description = "Formally verified Poly1305 MAC library"
version = "0.0.3-alpha.1"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[features]
expose-hacl = []

[dependencies]
libcrux-hacl-rs = { version = "=0.0.3-alpha.1", path = "../hacl-rs/" }
libcrux-macros = { version = "=0.0.3-alpha.1", path = "../macros" }
